fixed alignment on logos, added cloak for flashes

--- a/app/client/sass/play.scss
+++ b/app/client/sass/play.scss
@@ -7,7 +7,7 @@
 }
 .cardWrapper {
   padding: 0;
-  margin: 0.5em auto 0.5em;
+  margin: 2em auto 0.5em;
 }
 
 .cardDisplay {
